--- a/style.css
+++ b/style.css
@@ -4,3 +4,24 @@
     box-sizing: border-box;
     font-family: sans-serif;
 }
+header{
+    color: white;
+    background-color: #002420;
+    display: flex;
+    flex-direction: column;
+    padding: 3%;
+    width: 100%;
+}
+.nav-bar{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 4%;
+}
+.nav-bar ul{
+    background-color: aqua;
+    width: 150%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
