--- a/style.css
+++ b/style.css
@@ -1,27 +1,32 @@
 *{
     margin: 0;
-    border: 0;
     box-sizing: border-box;
     font-family: sans-serif;
 }
+
 header{
-    color: white;
-    background-color: #002420;
+    /*#002420*/
     display: flex;
     flex-direction: column;
-    padding: 3%;
-    width: 100%;
+}
+h2{
+    flex: 1;
 }
 .nav-bar{
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 4%;
+    padding: 3%;
+    background-color: #002420;
+    color: ghostwhite;
 }
-.nav-bar ul{
-    background-color: aqua;
-    width: 150%;
+.nav-links{
+    flex: 1;
+}
+ul{
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
+    list-style: none;
+}
+
+img{
+    width: 50%;
 }
