--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ header{
 }
 h2{
     flex: 1;
+    color: #fff;
 }
 .nav-bar{
     display: flex;
@@ -25,6 +26,20 @@ ul{
     display: flex;
     justify-content: space-around;
     list-style: none;
+}
+ul li{
+    font-size: 18px;
+}
+ul li a{
+    color: #fff;
+    text-decoration: none;
+}
+ul li :hover{
+    color: #e5e7eb;
+    opacity: 0.5;
+    text-decoration: underline;
+    transition: ease-in 0.3s;
+    
 }
 
 img{
