--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ header{
     /*#002420*/
     display: flex;
     flex-direction: column;
+    background-color: #002420;
 }
 h2{
     flex: 1;
@@ -16,7 +17,6 @@ h2{
 .nav-bar{
     display: flex;
     padding: 3%;
-    background-color: #002420;
     color: ghostwhite;
 }
 .nav-links{
@@ -41,14 +41,13 @@ ul li :hover{
     transition: ease-in 0.3s; 
 }
 .header-article{
+    color: #fff;
     display: flex;
     flex-direction: row;
     padding: 3%;
     gap: 3%;
 }
-.header-text{
-    flex: 1;
-}
+
 .header-image{
     display: flex;
     justify-content: center;
@@ -57,7 +56,28 @@ ul li :hover{
 .aston-martin{
     width: 90%;
     height: 90%;
+    border-radius: 10px;
 }
+.header-text{
+    display: flex;
+    flex-direction: column;
+    gap: 7%;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 40%;
+}
+.sign-up-button{
+    margin-top: 5%;
+    align-self: center;
+}
+h1{
+    font-size: 48px;
+}
+.header-text p{
+    font-size: 20px;
+}
+
 
 img{
     width: 50%;
