--- a/style.css
+++ b/style.css
@@ -77,7 +77,35 @@ h1{
 .header-text p{
     font-size: 20px;
 }
-
+.sign-up-button{
+    background-color: #86dc3d;
+    color: #000;
+    border-radius: 30px;
+    font-size: 1.25rem;
+    padding: 10px 40px;
+    transition: transform 0.3s ease;
+    border: 3px solid #000;
+}
+.sign-up-button::after, .sign-up-button::before{
+    content: "";
+    opacity: 0.3;
+    background-color: #86dc3d;
+    color: #26580f;
+    border-radius: inherit;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    transition: transform 0.3s ease;
+}
+.sign-up-button:hover{
+    transform: translate(-12px, -12px);
+}
+.sign-up-button:hover::after{
+    transform: translate(6px, 6px);
+}
+.sign-up-button:hover::before{
+    transform: translate(12px, 12px);
+}
 
 img{
     width: 50%;
