--- a/style.css
+++ b/style.css
@@ -78,33 +78,34 @@ h1{
     font-size: 20px;
 }
 .sign-up-button{
-    background-color: #86dc3d;
-    color: #000;
+    border: none;
+    width: 100px;
+    height: 50px;
+    font-size: 18px;
+    overflow: hidden;
+    color: #fff;
     border-radius: 30px;
-    font-size: 1.25rem;
-    padding: 10px 40px;
-    transition: transform 0.3s ease;
-    border: 3px solid #000;
+    background-image: linear-gradient(15deg, #27d86c 0%, #52eb23 50%, #2cdf14 100%);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-.sign-up-button::after, .sign-up-button::before{
+.sign-up-button::after{
     content: "";
-    opacity: 0.3;
-    background-color: #86dc3d;
-    color: #26580f;
-    border-radius: inherit;
-    width: 100%;
-    height: 100%;
+    width: 400px;
+    height: 400px;
+    position: absolute;
+    top: -50px;
+    left: -100px;
+    background-color: #ff3cac;
+    background-image: linear-gradient(22deg, rgb(39, 216, 108) 0%, rgb(82, 235, 35) 50%, #2cdf14 100%);
     z-index: -1;
-    transition: transform 0.3s ease;
+    transition: transform 0.5s ease;
 }
 .sign-up-button:hover{
-    transform: translate(-12px, -12px);
+    transform:  translate(0, -6px);
+    box-shadow: 10px -10px 25px 0 rgba(82, 235, 35, 0.5), -10px 10px 25px 0 rgba(39, 216, 108, 0.5);;
 }
 .sign-up-button:hover::after{
-    transform: translate(6px, 6px);
-}
-.sign-up-button:hover::before{
-    transform: translate(12px, 12px);
+    transform: rotate(150deg);
 }
 
 article{
