--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ article{
     flex: 1 1 auto;
     font-size: 2vw;
 }
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 900px) {
     .second-section{
         font-size: 3vw;
     }
@@ -179,6 +179,15 @@ article{
     }
     .header-text button{
         margin-top: 10%;
+    }
+}
+@media screen and (max-width: 634px){
+    header h2{
+        flex: 1;
+        color: #fff;
+    }
+    .nav-links{
+        flex: 2;
     }
 }
 .video{
@@ -205,7 +214,14 @@ article{
     border-radius: 30px;
 
 }
-
+footer{
+    background-color: #002420;
+    height: 100px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 img{
     width: 50%;
 }
